Jim's comments added

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -438,7 +438,7 @@ In this thesis we focus on co\--translation via the Sec pathway, and on the post
 \centering
 \includegraphics[width=1\textwidth]{Intro/post-versus-co-translation}
 		\captionof{figure}[A simplified schematic of the co\--translational Sec pathway and the post\--translational pathway.]{\textbf{A simplified schematic of the co\--translational Sec pathway and the post\--translational pathway.}
-		The ribosome translates RNA to a nascent polypeptide chain.
+		The ribosome translates \gls{rna} to a nascent polypeptide chain.
 		In the case of post\--translational insertion (the left\--path), the nascent peptide is released, albeit briefly, to the cytosol.
 		Chaperones of various types then shield the protein \gls{tmh} and bring it into contact with various \gls{tm} bound translocation machinery.
 		In the case of co\--translation (the right path), the \gls{srp} binds to the emerging signal sequence of the nascent peptide, which slows protein synthesis of the ribosome.
