--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,37 @@
+@article{Niesen2018,
+abstract = {During ribosomal translation, nascent polypeptide chains (NCs) undergo a variety of physical processes that determine their fate in the cell. Translation arrest peptide (AP) experiments are used to measure the external pulling forces that are exerted on the NC at different lengths during translation. To elucidate the molecular origins of these forces, a recently developed coarse-grained molecular dynamics (CGMD) is used to directly simulate the observed pulling-force profiles, thereby disentangling contributions from NC-translocon and NC-ribosome interactions, membrane partitioning, and electrostatic coupling to the membrane potential. This combination of experiment and theory reveals mechanistic features of Sec-facilitated membrane integration and protein translocation, including the interplay between transient interactions and conformational changes that occur during ribosomal translation to govern protein biogenesis.},
+author = {Niesen, Michiel and Muller-Lucks, Annika and Hedman, Rickard and von Heijne, Gunnar and Miller, Thomas F},
+doi = {10.1101/310698},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Niesen et al. - 2018 - Forces on nascent polypeptides during membrane insertion and translocation via the Sec translocon(2).pdf:pdf},
+journal = {bioRxiv},
+month = {apr},
+pages = {310698},
+publisher = {Cold Spring Harbor Laboratory},
+title = {{Forces on nascent polypeptides during membrane insertion and translocation via the Sec translocon}},
+url = {https://www.biorxiv.org/content/early/2018/04/29/310698},
+year = {2018}
+}
+@article{Raoult2008,
+abstract = {In this Opinion article, the authors consider the classification of viruses, and propose a new classification system that divides all biological entities into two groups of organisms: ribosome-encoding organisms (eukaryotes, archaea and bacteria) and capsid-encoding organisms (viruses). Unclassified selfish nucleic acids are grouped as 'orphan replicons'.},
+author = {Raoult, Didier and Forterre, Patrick},
+doi = {10.1038/nrmicro1858},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Raoult, Forterre - 2008 - Redefining viruses lessons from Mimivirus.pdf:pdf},
+issn = {1740-1526},
+journal = {Nature Reviews Microbiology},
+month = {apr},
+number = {4},
+pages = {315--319},
+publisher = {Nature Publishing Group},
+title = {{Redefining viruses: lessons from Mimivirus}},
+url = {http://www.nature.com/articles/nrmicro1858},
+volume = {6},
+year = {2008}
+}
 @article{Hagan2010,
 abstract = {Beta-barrel membrane proteins in Gram-negative bacteria, mitochondria, and chloroplasts are assembled by highly conserved multi-protein complexes. The mechanism by which these molecular machines fold and insert their substrates is poorly understood. It has not been possible to dissect the folding and insertion pathway because the process has not been reproduced in a biochemical system. We purified the components that fold and insert Escherichia coli outer membrane proteins and reconstituted beta-barrel protein assembly in proteoliposomes using the enzymatic activity of a protein substrate to report on its folding state. The assembly of this protein occurred without an energy source but required a soluble chaperone in addition to the multi-protein assembly complex.},
 author = {Hagan, Christine L. and Kim, Seokhee and Kahne, Daniel},
 doi = {10.1126/science.1188919},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hagan, Kim, Kahne - 2010 - Reconstitution of outer membrane protein assembly from purified components.pdf:pdf},
 isbn = {1095-9203 (Electronic)$\backslash$n0036-8075 (Linking)},
 issn = {00368075},
 journal = {Science},
