--- a/thesis.tex
+++ b/thesis.tex
@@ -52,8 +52,8 @@
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{sp}{SP}{Signal Peptide}
 \newacronym{snare}{SNARE}{Soluble N-ethylmaleimide-sensitive factor attachment protein receptor}
-\newacronym{ks}{KS}{Kolmogorov-Smirnov}
-\newacronym{kw}{KW}{Kruskal-Wallis}
+\newacronym{ks}{K\--S}{Kolmogorov-Smirnov}
+\newacronym{kw}{K\--W}{Kruskal-Wallis}
 \newacronym{gpcr}{GPCR}{G protein-–coupled receptor}
 \newacronym{htl}{HTL}{Holotranslocon}
 \newacronym{rna}{RNA}{Ribonucleic Acid}
@@ -93,24 +93,27 @@
 
 \prefacesection{Abstract}
 Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through transmembrane segments, to current work on recognition of protein trafficking and quality control.
-Transmembrane \(\alpha\) helix containing proteins make around a quarter of all proteins, as well as two-thirds of drug targets, and contain some of the most critical proteins required for life as we know it.
+Transmembrane \(\alpha\) helix containing proteins make around a quarter of all proteins, and represent around 40\% of drug targets, and contain some of the most critical proteins required for life as we know it.
 Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar transmembrane helix regions.
-What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues.
-Currently, it is known that the properties of transmembrane protein \(\alpha\) helices underpin membrane protein insertion mechanisms.
+What is missing in the current literature is a nuanced contextualised understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues.
 
 By leveraging large data-sets of transmembrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
-In this thesis, I make the argument that there are different classifications of transmembrane \(\alpha\) helices. These have markedly different evolutionary pressures, these different classes interact differently with the membrane, and each class serve the protein differently.
+In this thesis we present statistical evidence demonstrating the ``negative\--outside rule'' in opposition to the ``positive\--inside rule''.
+We identify different amino acid distributions in anchoring helices compared to transmembrane helices with function beyond anchoring that would allow anchors to stabilise more effectively in the membrane.
+We show adaptations of residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments as well as a 3D ampipathic arrangement of residues of spontaneously inserting transmembrane helices that may be responsible for their insertion.
+Finally, we find a conserved pattern of typically hydrophobic transmembrane helices neighbouring margainlly hydrophobic helices which may facilitate their insertion.
+
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
 
-The survival of each of our cells relies on a cellular barrier to separate themselves from the surrounding environment.
-The barrier works by being chemically very different from both the outside environment and to the inside of the cell, which in both cases are mostly water.
+The survival of each of our cells relies on a cellular barrier (the membrane) to separate themselves from the surrounding environment.
+The barrier works by being chemically very different from both the outside environment and the inside of the cell, which in both cases are mostly water.
 The membrane is fatty, and because of that, the membrane repels water.
 
 Proteins are the molecular machinery that forms much of the cell structure and shape as well as carrying out many of the cell's routine tasks.
 Around a third of our genome codes for proteins that are permanently embedded in the membrane.
-But because these membrane\--proteins are adapted for a life in the water repelling cell wall, they are very hard to study in laboratories which often rely on methods that hold proteins in water-based solutions.
+But because these membrane\--proteins are adapted for a life in the water repelling cell membrane, they are very hard to study in laboratories which often rely on methods that hold proteins in water-based solutions.
 
 In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin.
 
@@ -118,7 +121,7 @@ In this thesis, we focus particularly on the parts of the protein that are embed
 %This is especially true for regions that specifically anchor the protein into the cellular wall.
 %Where the embedded regions have an additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
 
-We computationally analysed the biochemical make-up of thousands of proteins from openly available biological databases.
+We computationally analysed the biochemical make\--up of thousands of proteins from openly available biological databases.
 
 This thesis demonstrates three features of membrane proteins:
 \begin{itemize}
